--- a/navbar.html
+++ b/navbar.html
@@ -1,16 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <link rel="stylesheet" crossorigin="anonymous" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
-    integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" />
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
-<link rel="stylesheet" href="css/style.css" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
+    />
+    <meta http-equiv="x-ua-compatible" content="ie=edge" />
+    <link
+      rel="stylesheet"
+      crossorigin="anonymous"
+      href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+      integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
+    />
+    <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+    <script src="/js/nav.js"></script>
+    <link rel="stylesheet" href="/css/style.css" />
     <title>Navbar</title>
-</head>
-<body>
+  </head>
+  <body>
     
-</body>
+    <nav class="navbar navbar-default navbar-doublerow navbar-trans navbar-fixed-top">
+      <!-- top nav -->
+      <nav class="navbar navbar-top hidden-xs">
+        <div class="container">
+          <!-- left nav top -->
+          <ul class="nav navbar-nav pull-left">
+            <li><a href="#"><span class="glyphicon glyphicon-thumbs-up text-white"></span></a></li>
+            <li><a href="#"><span class="glyphicon glyphicon-globe text-white"></span></a></li>
+            <li><a href="#"><span class="glyphicon glyphicon-pushpin text-white"></span></a></li>
+            <li><a href="#"><span class="text-white">QUESTIONS? CALL: <b>+PHONE NUMBER</b></span></a></li>
+          </ul>
+          <!-- right nav top -->
+          <ul class="nav navbar-nav pull-right">
+            <li><a href="#" class="text-white">About Us</a></li>
+            <li><a href="#" class="text-white">Contact Us</a></li> 
+          </ul>
+        </div>
+        <div class="dividline light-grey"></div>
+      </nav>
+      <!-- down nav -->
+      <nav class="navbar navbar-down">
+        <div class="container">
+          <div class="flex-container">  
+            <div class="navbar-header flex-item">
+              <div class="navbar-brand" href="https://github.com/alphadsy">ALPHAD</div>
+            </div>
+            <ul class="nav navbar-nav flex-item hidden-xs">
+              <li><a href="https://github.com/alphadsy">Projects</a></li>
+              <li><a href="https://github.com/alphadsy">Pricing</a></li> 
+              <li><a href="https://github.com/shu3aybbadran">TheTeam</a></li> 
+            </ul>
+            <ul class="nav navbar-nav flex-item hidden-xs pull-right">
+              <li><a href="https://bootsnipp.com/snippets/M5Nyj" class="">Header sectoin!</a></li> 
+            </ul>
+            <!-- dropdown only moblie -->
+              <div class="dropdown visible-xs pull-right">
+                <button class="btn btn-default dropdown-toggle " type="button" id="dropdownmenu" data-toggle="dropdown">
+                  <span class="glyphicon glyphicon-align-justify"></span> 
+                </button>
+                <ul class="dropdown-menu">
+                  <li><a href="#">Projects</a></li>
+                  <li><a href="#">Pricing</a></li> 
+                  <li><a href="#">TheTeam</a></li> 
+                  <li role="separator" class="divider"></li>
+                  <li><a href="#">contact us</a></li>
+                </ul>
+              </div>
+            </div>  
+          </div>
+        </nav>
+      </nav> 
+<header>
+      <img src="/images/bar-landing-logo.jpg" style="width:100%">
+</header>
+
+  </body>
 </html>
