--- a/navbar.html
+++ b/navbar.html
@@ -47,15 +47,15 @@
         <div class="container">
           <div class="flex-container">  
             <div class="navbar-header flex-item">
-              <div class="navbar-brand" href="https://github.com/alphadsy">ALPHAD</div>
+              <div class="navbar-brand" href="#">ALPHAD</div>
             </div>
             <ul class="nav navbar-nav flex-item hidden-xs">
-              <li><a href="https://github.com/alphadsy">Projects</a></li>
-              <li><a href="https://github.com/alphadsy">Pricing</a></li> 
-              <li><a href="https://github.com/shu3aybbadran">TheTeam</a></li> 
+              <li><a href="#">Projects</a></li>
+              <li><a href="#">Pricing</a></li> 
+              <li><a href="#">TheTeam</a></li> 
             </ul>
             <ul class="nav navbar-nav flex-item hidden-xs pull-right">
-              <li><a href="https://bootsnipp.com/snippets/M5Nyj" class="">Header sectoin!</a></li> 
+              <li><a href="#" class="">Header sectoin!</a></li> 
             </ul>
             <!-- dropdown only moblie -->
               <div class="dropdown visible-xs pull-right">
