--- a/navbar.html
+++ b/navbar.html
@@ -47,7 +47,7 @@
         <div class="container">
           <div class="flex-container">  
             <div class="navbar-header flex-item">
-              <div class="navbar-brand" href="#">ALPHAD</div>
+              <div class="navbar-brand" href="#">Bar</div>
             </div>
             <ul class="nav navbar-nav flex-item hidden-xs">
               <li><a href="#">Projects</a></li>
@@ -55,7 +55,7 @@
               <li><a href="#">TheTeam</a></li> 
             </ul>
             <ul class="nav navbar-nav flex-item hidden-xs pull-right">
-              <li><a href="#" class="">Header sectoin!</a></li> 
+              <li><a href="#" class="">Header sector!</a></li> 
             </ul>
             <!-- dropdown only moblie -->
               <div class="dropdown visible-xs pull-right">
