--- a/hung-index.html
+++ b/hung-index.html
@@ -12,8 +12,10 @@
 
 <body>
     <div class="hung-about-us">
-        <h1 class="hung-caption">ABOUT US</h1>
-        <P class="hung-caption2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima harum mollitia cumque recusandae quod facere explicabo ab maxime fugit at ad officiis labore natus odit, voluptatibus quisquam sunt neque minus?</P>
+        <div class="hung-box">
+            <h1 class="hung-caption">ABOUT US</h1>
+            <P class="hung-caption2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima harum mollitia cumque recusandae quod facere explicabo ab maxime fugit at ad officiis labore natus odit, voluptatibus quisquam sunt neque minus?</P>
+        </div>
     </div>
 
     <div id=" carouselExampleIndicators " class="carousel slide " data-ride="carousel ">
