--- a/navbar.html
+++ b/navbar.html
@@ -1,82 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
-    />
-    <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <link
-      rel="stylesheet"
-      crossorigin="anonymous"
-      href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
-      integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
-    />
-    <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
-<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-    <script src="/js/nav.js"></script>
-    <link rel="stylesheet" href="/css/style.css" />
-    <title>Navbar</title>
-  </head>
-  <body>
-    
-    <nav class="navbar navbar-default navbar-doublerow navbar-trans navbar-fixed-top">
-      <!-- top nav -->
-      <nav class="navbar navbar-top hidden-xs">
-        <div class="container">
-          <!-- left nav top -->
-          <ul class="nav navbar-nav pull-left">
-            <li><a href="#"><span class="glyphicon glyphicon-thumbs-up text-white"></span></a></li>
-            <li><a href="#"><span class="glyphicon glyphicon-globe text-white"></span></a></li>
-            <li><a href="#"><span class="glyphicon glyphicon-pushpin text-white"></span></a></li>
-            <li><a href="#"><span class="text-white">QUESTIONS? CALL: <b>+PHONE NUMBER</b></span></a></li>
-          </ul>
-          <!-- right nav top -->
-          <ul class="nav navbar-nav pull-right">
-            <li><a href="#" class="text-white">About Us</a></li>
-            <li><a href="#" class="text-white">Contact Us</a></li> 
-          </ul>
-        </div>
-        <div class="dividline light-grey"></div>
-      </nav>
-      <!-- down nav -->
-      <nav class="navbar navbar-down">
-        <div class="container">
-          <div class="flex-container">  
-            <div class="navbar-header flex-item">
-              <div class="navbar-brand" href="#">Bar</div>
-            </div>
-            <ul class="nav navbar-nav flex-item hidden-xs">
-              <li><a href="#">Projects</a></li>
-              <li><a href="#">Pricing</a></li> 
-              <li><a href="#">TheTeam</a></li> 
-            </ul>
-            <ul class="nav navbar-nav flex-item hidden-xs pull-right">
-              <li><a href="#" class="">Header sector!</a></li> 
-            </ul>
-            <!-- dropdown only moblie -->
-              <div class="dropdown visible-xs pull-right">
-                <button class="btn btn-default dropdown-toggle " type="button" id="dropdownmenu" data-toggle="dropdown">
-                  <span class="glyphicon glyphicon-align-justify"></span> 
-                </button>
-                <ul class="dropdown-menu">
-                  <li><a href="#">Projects</a></li>
-                  <li><a href="#">Pricing</a></li> 
-                  <li><a href="#">TheTeam</a></li> 
-                  <li role="separator" class="divider"></li>
-                  <li><a href="#">contact us</a></li>
-                </ul>
-              </div>
-            </div>  
-          </div>
-        </nav>
-      </nav> 
-<header>
-      <img src="/images/bar-landing-logo.jpg" style="width:100%">
-</header>
 
-  </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/chinh-style.css">
+    <title>Document</title>
+</head>
+
+<body>
+
+    <div class="wrapper">
+        <header>
+            <nav>
+                <div class="menu-icon">
+                    <i class="fa fa-bars fa-2x"></i>
+                </div>
+                <div class="logo">
+                    LOGO
+                </div>
+                <div class="menu">
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">Contact</a></li>
+                        <li><a href="#">Contact</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
+                </div>
+            </nav>
+            <div class="container">
+                <img src="/images/logo.jfif" alt="logo" class="img-fluid"> </br>
+                </br>
+                <div class="scroll-stop scroller">
+                    <button type="button" class="btn btn-danger">See More</button></div>
+
+            </div>
+        </header>
+    </div>
+
+    <div class="hung-about-us">
+        <h1 class="hung-caption">ABOUT US</h1>
+        <P class="hung-caption2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima harum mollitia cumque recusandae quod facere explicabo ab maxime fugit at ad officiis labore natus odit, voluptatibus quisquam sunt neque minus?</P>
+    </div>
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img class="d-block w-100" src="https://placeimg.com/1080/500/animals" height="500px" alt="First slide">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5 class="hung-caption">My Caption Title (1st Image)</h5>
+                    <p class="hung-caption2">The whole caption will only show up if the screen is at least medium size.</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="https://placeimg.com/1080/500/arch" height="500px" alt="Second slide">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5 class="hung-caption">My Caption Title (1st Image)</h5>
+                    <p class="hung-caption2">The whole caption will only show up if the screen is at least medium size.</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="https://placeimg.com/1080/500/nature" height="500px" alt="Third slide">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5 class="hung-caption">My Caption Title (1st Image)</h5>
+                    <p class="hung-caption2">The whole caption will only show up if the screen is at least medium size.</p>
+                </div>
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script type="text/javascript">
+        $(document).ready(function() {
+            $('.carousel').carousel({
+                interval: 4000
+            })
+        });
+    </script>
+    <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="js/nav.js"></script>
+    <script src="js/scroll.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
+</body>
+
 </html>
