change filenames to booking_footer.html & booking_footer.css

--- a/booking_footer.html
+++ b/booking_footer.html
@@ -12,8 +12,7 @@
             href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
             integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" />
         <script src="https://kit.fontawesome.com/c20b1b26eb.js" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="css/style.css">
-        <link rel="stylesheet" href="css/_variables.scss">
+        <link rel="stylesheet" href="css/booking_footer.css">
         <title>Booking & footer</title>
     </head>
 
@@ -22,10 +21,11 @@
             <div class="container">
                 <div class="container bf">
                     <div class="booking-form">
-                        <h1 class="l-heading" style="text-align: center; color: #f4f4f4; font-family: 'Courier New', Courier, monospace; font-size: 70px;">
+                        <h1 class="l-heading" 
+                            style="text-align: center; color: #f4f4f4; font-family: 'Courier New', Courier, monospace; font-size: 70px; padding-bottom: 0; margin-bottom: 0;">
                             Booking
                         </h1>
-                        <p style="text-align: center; font-weight: bold; color: #f4f4f4; font-family: 'Courier New', Courier, monospace; font-size: 20px;">
+                        <p style="text-align: center; font-weight: bold; color: #f4f4f4; font-family: 'Courier New', Courier, monospace; font-size: 20px; margin-top: 0; margin-bottom: 25px;">
                             Please fill out the form below to book your reservation
                         </p>
                         <form action="process.php">
