--- a/hung-index-original.html
+++ b/hung-index-original.html
@@ -16,7 +16,7 @@
         <h1 class="hung-caption">ABOUT US</h1>
         <P class="hung-caption2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima harum mollitia cumque recusandae quod facere explicabo ab maxime fugit at ad officiis labore natus odit, voluptatibus quisquam sunt neque minus?</P>
     </div>
-    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <div id="carouselExampleIndicators" class="carousel" data-ride="carousel">
         <ol class="carousel-indicators">
             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
