--- a/navbar.html
+++ b/navbar.html
@@ -30,9 +30,9 @@
                 <div class="menu">
                     <ul>
                         <li><a class="navbar-item" href="#">Home</a></li>
-                        <li><a class="navbar-item" href="#">About</a></li>
-                        <li><a class="navbar-item" href="#">Blog</a></li>
-                        <li><a class="navbar-item" href="#">Contact</a></li>
+                        <li><a class="navbar-item click-me-btn scroll-stop scroller" href="#">About Us</a></li>
+                        <li><a class="navbar-item" href="#">Menu</a></li>
+                        <li><a class="navbar-item" href="#">Booking</a></li>
                     </ul>
                 </div>
             </nav>
