--- a/navbar.html
+++ b/navbar.html
@@ -47,6 +47,7 @@
         </header>
     </div>
     <div class="jumbotron hung-about-us" style="height: 960;">
+        <div class="container">
         <h1 class="hung-caption ">ABOUT US</h1>
         <h3 class="hung-caption2" style="text-align: justify;">Gastro NightBarClub in Ho Chi Minh is a sleek and fashionable nightspot where the young
             and beautiful party the night away to different styles of music, depending on the evening. On Fridays and
@@ -64,6 +65,7 @@
                 <li><a href="#"><i class="fa fa-instagram " aria-hidden="true"></i></a></li>
             </ul>
         </div>
+    </div>
     </div>
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
