--- a/author.html
+++ b/author.html
@@ -18,7 +18,11 @@
   </head>
 
   <body>
+    <div class="jumbotron" style="background-color: rgba(24, 17, 9, 0.3);">
     <div class="container">
+      <div>
+        <h1 class="text-center text-dark">Contributors Of The Site</h1>
+      </div>
       <div class="chinh-cot">
         <div class="col-md-3 col-sm-6">
           <div class="our-team">
@@ -106,6 +110,7 @@
           </div>
       </div>
     </div>
+  </div>
 
     <script
       src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
