--- a/minh_booking.html
+++ b/minh_booking.html
@@ -67,11 +67,11 @@
                     <button class="btn btn-primary w-100" type="submit">Submit</button>
                   </form>
                 </div>
-        
+                <!-- Chinh Le fixed size for google map position-->
                 <div class="col google-map">
                   <iframe class="embed-responsive-item w-100"
                     src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15677.28794047012!2d106.6947171!3d10.7866326!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xae854621c16b504b!2sNoir.%20Dining%20In%20The%20Dark%20Saigon!5e0!3m2!1sen!2s!4v1582790403854!5m2!1sen!2s"
-                    width="490" height="490" frameborder="0" style="border:0;" allowfullscreen="">
+                    width="100%" height="100%" frameborder="0" style="border-radius: 30px;" allowfullscreen="true">
                   </iframe>
                 </div>
               </div>
