--- a/navbar.html
+++ b/navbar.html
@@ -17,7 +17,8 @@
 </head>
 
 <body>
-    <div class="wrapper">
+    <!--Chinh's Part Start-->
+    <div class="wrapper texttop">
         <header>
             <nav>
                 <div class="menu-icon">
@@ -41,7 +42,7 @@
                     class="img-fluid" style="width: 600px;"> </br>
                 </br>
                 <div class="intro">
-                    <p class="typewrite red display-4" data-period="2000"
+                    <p class="typewrite white display-5" data-period="1500"
                         data-type='["Wanna something new?", "What are you waiting for?", "Top Ten Night Bar of SEA","Join us in Gastro Today!"]'>
                     </p>
                 </div>
@@ -51,6 +52,8 @@
             </div>
         </header>
     </div>
+<!-- Chinh's Part End -->
+<!-- Hung's Part Start -->
     <div class="jumbotron hung-about-us" style="height: 960;">
         <div class="container">
         <h1 class="hung-caption">ABOUT US</h1>
@@ -132,6 +135,7 @@
             <span class="sr-only">Next</span>
         </a>
     </div>
+    <!-- Hung's Part End -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
