--- a/minh_booking.html
+++ b/minh_booking.html
@@ -137,7 +137,7 @@
                     </div>
 
                     <div class="bottom">
-                        <p>Bardoo Mobile Bar &copy; 2020, All Rights Reserved <img src="https://masthead.scdn.co/065b62cfb94f49960e7c37413175e2bb/flags/us.svg" 
+                        <p>GastroBar &copy; 2020, All Rights Reserved <img src="https://masthead.scdn.co/065b62cfb94f49960e7c37413175e2bb/flags/us.svg" 
                                                                                    width="50px" height="20px"> 
                         </p>
                     </div>
