--- a/an_menu.html
+++ b/an_menu.html
@@ -10,50 +10,85 @@
 </head>
 
 <body>
-    <div class="col-md max-width">
-        <div class="row no-gutters border-top border-bottom overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-            <div class="col-auto d-none d-lg-block">
-                <img width="350" height="470" src="img/Clover-Club.jpg">
-            </div>
-            <div class="col d-flex flex-column position-static an-content">
-                <h1 class="mb-0 mt-5 pt-5 ">Clover Club</h1>
-                <p class="card-text mb-auto pt-3">“Gin, berries and lemon make for a trifecta of great flavor, those berry flavors go so well with the botanicals of gin and a little egg white gives it a creamy mouthfeel. It’s so delicious." </p>
-            </div>
-        </div>
+    <div class="an-special-menu">
+        <h1 class="an-letter">NO PARTY IS COMPLETE WITHOUT COCKTAILS...</h1>
     </div>
-    <div class="col-md max-width">
-        <div class="row no-gutters border-top border-bottom overflow-hidden flex-md-row mb-4  shadow-sm h-md-250 position-relative">
-            <div class="col d-flex flex-column position-static an-content">
-                <h1 class="mb-0 mt-5 pt-5">Aquavit Alexander</h1>
-                <p class="mb-auto pt-3">Dill, cacao and oat milk… Yep – that’s what goes into this handsome post-supper sipper from GILT.</p>
-            </div>
-            <div class="col-auto d-none d-lg-block">
-                <img width="350" height="470" src="img/aquavit-alexander-c.jpg">
-            </div>
-        </div>
-    </div>
-    <div class="col-md max-width ">
-        <div class="row no-gutters border-top border-bottom overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-            <div class="col-auto d-none d-lg-block">
-                <img width="350" height="470" src="img/italian-milkshake-c.jpg">
-            </div>
-            <div class="col p-4 d-flex flex-column position-static an-content">
-                <h1 class="mb-0 mt-5 pt-5">Italian Milkshake</h1>
-                <p class="card-text mb-auto pt-3">It’s a perfect mix between sweet and salty that will make you want way more than what is good for your BMI…</p>
-            </div>
-        </div>
-    </div>
+
     <div class="col-md max-width">
         <div class="row no-gutters border-top border-bottom overflow-hidden flex-md-row mb-4  shadow-sm h-md-250 position-relative">
             <div class="col p-4 d-flex flex-column position-static an-content">
-                <h1 class="mb-0 mt-5 pt-5">Valkyrie Hot Toddy</h1>
-                <p class="mb-auto pt-3"> A blend of licorice root, fennel seeds, orange peel, chili, cinnamon and star anise – a beautiful blend everyone loves.</p>
-            </div>
-            <div class="col-auto d-none d-lg-block">
-                <img width="350" height="470" src="img/valkyrie-hot-toddy-c.jpg">
+                <div class="gifi"> <iframe src="https://giphy.com/embed/gpP18dtmlplle" width="1700" height="492" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
+                </div>
             </div>
         </div>
     </div>
+
+    <div class="an-special-menu">
+        <h1 class="an-letter">- SPECIAL MENU THIS SUMMER -</h1>
+    </div>
+
+    <div class="col-md max-width mt-5 mb-5">
+        <div class="row no-gutters border-top border-bottom mt-3 mb-3 overflow-hidden flex-md-row mb-4  shadow-sm h-md-250 position-relative">
+            <div class="col-auto d-none d-lg-block pb-4 pt-4 ">
+                <img width="290" height="450" src="https://www.maliburumdrinks.com/globalassets/images/cocktail-recipe-images/malibu-mojito.png?impolicy=CocktailHero">
+                <div class="an-name">Hero Mojito</div>
+            </div>
+            <div class="col-auto d-none d-lg-block pb-4 pt-4">
+                <img width="290" height="450" src="https://www.maliburumdrinks.com/contentassets/3cd6b50c158b4100bd20bf3423b48419/malibusparklingpinacolada_2.png?impolicy=CocktailHero">
+                <div class="an-name">Bubbly Pina</div>
+            </div>
+            <div class="col-auto d-none d-lg-block pb-4 pt-4">
+                <img width="290" height="450" src="https://www.maliburumdrinks.com/contentassets/8670705aa7174418a834d686ebc03cd5/malibu-passion-fruit-pornstar-martini.png?impolicy=CocktailHero">
+                <div class="an-name">Passionate PornStar</div>
+            </div>
+            <div class="col-auto d-none d-lg-block pb-4 pt-4">
+                <img width="290" height="450" src="https://www.maliburumdrinks.com/contentassets/5bad6711cf1d4f7b87dc9ac1f2c87fd6/malibu-lime-pineapple-martini.png?impolicy=CocktailHero">
+                <div class="an-name">Pineatini</div>
+            </div>
+            <div class="col-auto d-none d-lg-block pb-4 pt-4">
+                <img width="290" height="450" src="https://www.maliburumdrinks.com/contentassets/c5521d8b609f41c08277b78dc53320b8/malibupinacoladaslushy_2.png?impolicy=CocktailHero">
+                <div class="an-name">Cola-Slushy</div>
+            </div>
+            <div class="col-auto d-none d-lg-block pb-4 pt-4">
+                <img width="290" height="450" src="https://www.maliburumdrinks.com/contentassets/472cb66e273947afb381e14b00dffc52/malibupinkgrapefruit.png?impolicy=CocktailHero">
+                <div class="an-name">Kinky Grapefruit</div>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="col-md max-width mt-5 mb-5">
+        <div class="row no-gutters border-top border-bottom overflow-hidden flex-md-row mb-4  shadow-sm h-md-250 position-relative">
+            <div class="col-auto d-none d-lg-block pb-4 pt-4">
+                <img width="290" height="450" src="https://www.maliburumdrinks.com/contentassets/7db9554b273e45bbaba988aad004746d/malibubananapineapplefrozendaiquiri_2.png?impolicy=CocktailHero">
+                <div class="an-name">Baneapple-Quiri</div>
+            </div>
+            <div class="col-auto d-none d-lg-block pb-4 pt-4">
+                <img width="290" height="450" src="https://www.maliburumdrinks.com/contentassets/aa7cef789953423fa6e4280d17c2c50c/malibupineapplepinacoladargb.png?impolicy=CocktailHero">
+                <div class="an-name">PinaColada</div>
+            </div>
+            <div class="col-auto d-none d-lg-block pb-4 pt-4">
+                <img width="290" height="450" src="https://www.maliburumdrinks.com/contentassets/025b297254b54e848f704d9010053487/maliburosespritz.png?impolicy=CocktailHero">
+                <div class="an-name">Rose Spritz</div>
+            </div>
+            <div class="col-auto d-none d-lg-block pb-4 pt-4">
+                <img width="290" height="450" src="https://www.maliburumdrinks.com/contentassets/3df4f6bc79b9496e8a8ac28702d65251/malibulimespritzrgb.png?impolicy=CocktailHero">
+                <div class="an-name">Lime Spritz</div>
+            </div>
+            <div class="col-auto d-none d-lg-block pb-4 pt-4">
+                <img width="290" height="450" src="https://www.maliburumdrinks.com/contentassets/f752fc6adb9245e19d8fb231a750c886/malibupineapplergb.png?impolicy=CocktailHero">
+                <div class="an-name">PineaLada</div>
+            </div>
+            <div class="col-auto d-none d-lg-block pb-4 pt-4">
+                <img width="290" height="450" src="https://www.maliburumdrinks.com/contentassets/b6e4d241b75d4341a8d519752ce14e6c/malibulimefrozendaiquiri_2.png?impolicy=CocktailHero">
+                <div class="an-name">Limquiri</div>
+            </div>
+        </div>
+    </div>
+    <div class="an-special-menu">
+        <h1 class="an-letter">BRING ALL FRIENDS FOR A FREE SHOT AT MIDNIGHT</h1>
+    </div>
+
 
 
 
