--- a/navbar.html
+++ b/navbar.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/chinh-style.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
+    <link rel="stylesheet" href="css/author.css">
     <title>|||| Gastro Bar Club ||||</title>
 </head>
 
@@ -136,6 +137,99 @@
         </a>
     </div>
     <!-- Hung's Part End -->
+    <!-- Chinh's Author Part -->
+    <div class="jumbotron author-img-back">
+        <div class="trans-array-back">
+          <h1 class="text-center text-dark">Contributors Of The Site</h1>
+        <div class="row chinh-cot">
+          <div class="col col-cards">
+            <div class="our-team">
+              <div class="pic">
+                <img src="/images/ava.png" />
+              </div>
+              <div class="team-content px-1">
+                <h3>Author's Name</h3>
+                <span class="post px-1"> Web Dev - No.1 + 25% Team </span>
+              </div>
+              <ul class="social">
+                <li><a href="" class="fa fa-facebook"></a></li>
+                <li><a href="" class="fa fa-twitter"></a></li>
+                <li><a href="" class="fa fa-google-plus"></a></li>
+              </ul>
+            </div>
+          </div>
+  
+          <div class="col col-cards">
+              <div class="our-team">
+                <div class="pic">
+                  <img src="/images/ava.png" />
+                </div>
+                <div class="team-content px-1">
+                  <h3>Author's Name</h3>
+                  <span class="post px-1"> Web Dev - No.1 + 25% Team </span>
+                </div>
+                <ul class="social">
+                  <li><a href="" class="fa fa-facebook"></a></li>
+                  <li><a href="" class="fa fa-twitter"></a></li>
+                  <li><a href="" class="fa fa-google-plus"></a></li>
+                </ul>
+              </div>
+            </div>
+  
+            <div class="col col-cards">
+              <div class="our-team">
+                <div class="pic">
+                  <img src="/images/ava.png" />
+                </div>
+                <div class="team-content px-1">
+                  <h3>Author's Name</h3>
+                  <span class="post px-1"> Web Dev - No.1 + 25% Team </span>
+                </div>
+                <ul class="social">
+                  <li><a href="" class="fa fa-facebook"></a></li>
+                  <li><a href="" class="fa fa-twitter"></a></li>
+                  <li><a href="" class="fa fa-google-plus"></a></li>
+                </ul>
+              </div>
+            </div>
+  
+            <div class="col col-cards">
+              <div class="our-team">
+                <div class="pic">
+                  <img src="/images/ava.png" />
+                </div>
+                <div class="team-content px-1">
+                  <h3>Author's Name</h3>
+                  <span class="post px-1"> Web Dev - No.1 + 25% Team </span>
+                </div>
+                <ul class="social">
+                  <li><a href="" class="fa fa-facebook"></a></li>
+                  <li><a href="" class="fa fa-twitter"></a></li>
+                  <li><a href="" class="fa fa-google-plus"></a></li>
+                </ul>
+              </div>
+            </div>
+  
+            <div class="col col-cards">
+              <div class="our-team">
+                <div class="pic">
+                  <img src="/images/ava.png" />
+                </div>
+                <div class="team-content px-1">
+                  <h3>Author's Name</h3>
+                  <span class="post px-1"> Web Dev - No.1 + 25% Team </span>
+                </div>
+                <ul class="social">
+                  <li><a href="" class="fa fa-facebook"></a></li>
+                  <li><a href="" class="fa fa-twitter"></a></li>
+                  <li><a href="" class="fa fa-google-plus"></a></li>
+                </ul>
+              </div>
+            </div>
+        </div>
+    </div>
+    </div>
+    <!-- Chinh's Author Part -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
