--- a/minh_booking.html
+++ b/minh_booking.html
@@ -7,7 +7,9 @@
               href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
               integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" 
               crossorigin="anonymous">
+              <script src="https://kit.fontawesome.com/c20b1b26eb.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="css/minh_booking.css">
+
         <link rel="stylesheet" 
               crossorigin="anonymous" 
               href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
