--- a/Chinh-index.html
+++ b/Chinh-index.html
@@ -35,7 +35,7 @@
           <ul>
             <li><a class="navbar-item" href="#">Home</a></li>
             <li><a class="navbar-item click-me-btn scroll-stop scroller" href="#">About Us</a></li>
-            <li><a class="navbar-item" href="#">Menu</a></li>
+            <li><a class="navbar-item click-me-btn scroller-menu" href="#">Menu</a></li>
             <li><a class="navbar-item" href="#">Booking</a></li>
           </ul>
         </div>
@@ -142,12 +142,12 @@
   </div>
   <!-- Hung's Part End -->
   <!-- Nhan's Part Start -->
-  <div class="nhan-menu-title"> MENUS
+  <div class="nhan-menu-title"> MENU
   </div>
   
   
-  <div class="letter-res jumbotron" style="margin: 0;"> 
-  <div class="container">
+  <div class="letter-res jumbotron nhan-new-res" style="margin: 0;"> 
+  <div class="container ">
       <div class="row">
       <div class="letter-sign">
           <div class="col nhan-newsletter">NEWSLETTER SIGNUP </div>
@@ -381,8 +381,8 @@
               <img src="/images/ava.png" />
             </div>
             <div class="team-content px-1">
-              <h3>Author's Name</h3>
-              <span class="post px-1"> Web Dev - No.1 + 25% Team </span>
+              <h3>Chinh Le</h3>
+              <span class="post px-1"> Scrum Master </span>
             </div>
             <ul class="social">
               <li><a href="" class="fab fa-facebook-f"></a></li>
@@ -398,8 +398,8 @@
               <img src="/images/ava.png" />
             </div>
             <div class="team-content px-1">
-              <h3>Author's Name</h3>
-              <span class="post px-1"> Web Dev - No.1 + 25% Team </span>
+              <h3>Nhan Nguyen</h3>
+              <span class="post px-1"> Web - Software Engineer </span>
             </div>
             <ul class="social">
               <li><a href="" class="fab fa-facebook-f"></a></li>
@@ -415,8 +415,8 @@
               <img src="/images/ava.png" />
             </div>
             <div class="team-content px-1">
-              <h3>Author's Name</h3>
-              <span class="post px-1"> Web Dev - No.1 + 25% Team </span>
+              <h3>An Ngoan</h3>
+              <span class="post px-1"> Product Owner </span>
             </div>
             <ul class="social">
               <li><a href="" class="fab fa-facebook-f"></a></li>
@@ -432,8 +432,8 @@
               <img src="/images/ava.png" />
             </div>
             <div class="team-content px-1">
-              <h3>Author's Name</h3>
-              <span class="post px-1"> Web Dev - No.1 + 25% Team </span>
+              <h3>Hung Nguyen</h3>
+              <span class="post px-1"> Web - Software Engineer </span>
             </div>
             <ul class="social">
               <li><a href="" class="fab fa-facebook-f"></a></li>
@@ -449,8 +449,8 @@
               <img src="/images/ava.png" />
             </div>
             <div class="team-content px-1">
-              <h3>Author's Name</h3>
-              <span class="post px-1"> Web Dev - No.1 + 25% Team </span>
+              <h3>Minh Vu</h3>
+              <span class="post px-1"> Web - Software Engineer </span>
             </div>
             <ul class="social">
               <li><a href="" class="fab fa-facebook-f"></a></li>
