--- a/Chinh-index.html
+++ b/Chinh-index.html
@@ -15,7 +15,7 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet" />
   <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
   <link rel="stylesheet" href="css/author.css">
-  <link rel="stylesheet" href="nhanstyle.css">
+  <link rel="stylesheet" href="css/nhanstyle.css">
   <title>|||| Gastro Bar Club ||||</title>
 </head>
 
