edit class names in html & css files

--- a/minh_booking.html
+++ b/minh_booking.html
@@ -17,13 +17,13 @@
     </head>
 
     <body>
-        <div class="jumbotron chinhle">
-            <div class="container request-chinh">
+        <div class="jumbotron minh">
+            <div class="container request-minh">
               <div class="row mx-auto">
                 <div class="col text-center dark">
-                  <div class="title" style="border-radius: 10px; margin: 10px; background: brown; width: 97%;">
+                  <div class="minh-title" style="border-radius: 10px; margin: 10px; background: brown; width: 97%;">
                     <h1 style="margin: 0; padding: 0; color: #fff; font-size: 50px; font-family: 'Reenie Beanie', cursive;">Booking</h1>
-                    <p style="color: #fff; margin-bottom: 20px; padding-bottom: 13px; font-size: 17px; font-family: 'Reenie Beanie', cursive;">
+                    <p style="color: #fff; margin: 10px 20px 0 0; padding-bottom: 13px; font-size: 17px; font-family: 'Reenie Beanie', cursive;">
                        Please fill out the form below to book your reservation.
                     </p>
                   </div>
@@ -31,7 +31,7 @@
 
                 <div class="col">
                   <div class="title" style="border-radius: 10px; margin: 10px; background: brown; width: 97%; height: 70px; padding-top: 10px;">
-                    <p style="text-align: center; font-size: 50px; font-family: 'Reenie Beanie', cursive; color: #fff;">
+                    <p style="text-align: center; font-size: 50px; font-family: 'Reenie Beanie', cursive; color: #fff; margin: 10px 0;">
                       Location
                     </p>
                   </div>                 
@@ -67,7 +67,7 @@
                       <textarea class="form-control" id="exampleFormControlTextarea1" rows="6" placeholder="Your Addtional Request"></textarea>
                     </div>
 
-                    <button class="btn btn-primary w-100" type="submit">Submit</button>
+                    <button class="minh-btn btn-primary w-100" type="submit">Submit</button>
                   </form>
                 </div>
                 <!-- Chinh Le fixed size for google map position-->
@@ -136,8 +136,8 @@
                         </div>
                     </div>
 
-                    <div class="bottom">
-                        <p>GastroBar &copy; 2020, All Rights Reserved <img src="https://masthead.scdn.co/065b62cfb94f49960e7c37413175e2bb/flags/us.svg" 
+                    <div class="minh-bottom">
+                        <p style="margin: 10px 0;">GastroBar &copy; 2020, All Rights Reserved <img src="https://masthead.scdn.co/065b62cfb94f49960e7c37413175e2bb/flags/us.svg" 
                                                                                    width="50px" height="20px"> 
                         </p>
                     </div>
