--- a/Chinh-index.html
+++ b/Chinh-index.html
@@ -34,7 +34,7 @@
         </div>
         <div class="menu">
           <ul>
-            <li><a class="navbar-item" href="#">Home</a></li>
+            <li><a class="navbar-item click-me-btn scroller-home" href="#">Home</a></li>
             <li><a class="navbar-item click-me-btn scroll-stop scroller" href="#">About Us</a></li>
             <li><a class="navbar-item click-me-btn scroller-menu" href="#">Menu</a></li>
             <li><a class="navbar-item" href="#">Booking</a></li>
