--- a/minh_booking.html
+++ b/minh_booking.html
@@ -18,7 +18,7 @@
         <title>Booking & footer</title>
     </head>
 
-    <body>
+    <body></body>
         <div class="jumbotron chinhle">
             <div class="container request-chinh">
               <div class="row mx-auto my-3">
@@ -83,7 +83,7 @@
             </div>
         </div>
 
-        <div class="jumbotron jumbotron-fluid" style="padding: 0; height: 20px;">
+        <div class="jumbotron jumbotron-fluid">
             <div style="max-width: 100%;">
                 <footer class="col f-minh container">
                     <div class="row up-minh mx-5">
