--- a/Chinh-index.html
+++ b/Chinh-index.html
@@ -5,6 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="https://fonts.googleapis.com/css?family=Loved+by+the+King&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Cormorant+Upright&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Rouge+Script&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Satisfy&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Parisienne&display=swap" rel="stylesheet">
   <link rel="shortcut icon" href="/images/tab-logo.png" type="image/x-icon">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
     integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous" />
@@ -92,46 +97,34 @@
       <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
     </ol>
     <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img class="d-block w-100" src="https://placeimg.com/1080/500/animals" height="500px" alt="First slide">
+      <div class="carousel-item active" style="height: 500px;">
+        <img class="d-block w-100" src="https://www.saigon.park.hyattrestaurants.com/uploads/1/1/2/9/112964589/ladies-first-beefeater-1600x800_orig.png" alt="First slide">
         <div class="carousel-caption d-none d-md-block">
-          <h5 class="hung-caption">My Caption Title (1st Image)</h5>
-          <p class="hung-caption2">The whole caption will only show up if the screen is at least medium size.
-          </p>
+
         </div>
       </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="https://placeimg.com/1080/500/arch" height="500px" alt="Second slide">
-        <div class="carousel-caption d-none d-md-block">
-          <h5 class="hung-caption">My Caption Title (1st Image)</h5>
-          <p class="hung-caption2">The whole caption will only show up if the screen is at least medium size.
+      <div class="carousel-item" style="height: 500px;">
+        <img class="d-block w-100" src="https://scontent.fsgn3-1.fna.fbcdn.net/v/t1.0-9/s960x960/39748359_947529668751779_4018671654711328768_o.jpg?_nc_cat=107&_nc_sid=e007fa&_nc_ohc=vCTyKz-rfwEAX9j-ej2&_nc_ht=scontent.fsgn3-1.fna&_nc_tp=7&oh=c7e01594159725151e515e0a9bd43ab4&oe=5EB5A9B8" height="500px" alt="Second slide">
+        <div class="carousel-caption d-none d-md-block" style="background-color: rgba(41, 39, 39, 0.6);">
+          <h5 class="hung-caption">Acoustic <span class="hung-fontstyle" style="font-family: 'Satisfy';">"dreamaway"</span> Weekends</h5>
+          <h2 class="hung-caption3">Featuring:</h2>
+          <p class="hung-caption2" style="font-family:'Satisfy'; font-size: 40px;">Vu Thanh Van | Ngot | Paola Zulawski
           </p>
+          <p class="hung-caption4">Saturday | 9:30PM - 11PM</p>
+          <p class="hung-caption5">Sunday   | 9:30PM - 11PM</p>
         </div>
       </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="https://placeimg.com/1080/500/nature" height="500px" alt="Third slide">
+      <div class="carousel-item" style="height: 500px;">
+        <img class="d-block w-100" src="https://images.unsplash.com/photo-1562754221-eeff8ab1ec74?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1496&q=80" alt="Third slide">
         <div class="carousel-caption d-none d-md-block">
-          <h5 class="hung-caption">My Caption Title (1st Image)</h5>
-          <p class="hung-caption2">The whole caption will only show up if the screen is at least medium size.
+          <img src="https://lh3.googleusercontent.com/proxy/wQ2DZBudTn62AkjEvb8pkpqMWFS1PBALCqnu6G2LY2Sfkfvh9xe2CW_NPQhGdIpBNfKNg0uOvvMsyS0Bz5KbzQBjEFbPQYWqHtXm-m9VMrL3VjKRowfzwrRRpSPn5w" alt="">
+          <h5 class="hung-caption6">. . . and Redemption</h5>
+          <p class="hung-caption7"> Live Electronic Experiment -- <span>by DJ "shadowy" Shadow</span>
           </p>
+          <p class="hung-caption8" style="color: cornflowerblue;">Date & Time | Soon!</p>
         </div>
       </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="https://placeimg.com/1080/500/animals" height="500px" alt="Fourth slide">
-        <div class="carousel-caption d-none d-md-block">
-          <h5 class="hung-caption">My Caption Title (1st Image)</h5>
-          <p class="hung-caption2">The whole caption will only show up if the screen is at least medium size.
-          </p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="https://placeimg.com/1080/500/animals" height="500px" alt="Fifth slide">
-        <div class="carousel-caption d-none d-md-block">
-          <h5 class="hung-caption">My Caption Title (1st Image)</h5>
-          <p class="hung-caption2">The whole caption will only show up if the screen is at least medium size.
-          </p>
-        </div>
-      </div>
+
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -144,7 +137,7 @@
   </div>
   <!-- Hung's Part End -->
   <!-- Nhan's Part Start -->
-  <div class="nhan-menu-title"> MENU
+  <div class="nhan-menu-title"> MENU 
   </div>
 
 
@@ -204,7 +197,7 @@
           <img class="img"
             src="https://www.maliburumdrinks.com/contentassets/fc465d9e45a0442c8e4ff191e7affa4b/malibupaloma.png"
             alt="">
-          <div class="nhan-text-block">
+          <div class="nhan-text-block" style="font-family: Satisfy;">
             WHITEWALKER
           </div>
           <div class="overlay">
@@ -216,7 +209,7 @@
           <img class="img"
             src="https://www.maliburumdrinks.com/contentassets/930969962b6240ac8334decfec70b464/malibupassionfruithurricane.png"
             alt="">
-          <div class="nhan-text-block-2">
+          <div class="nhan-text-block-2" style="font-family: 'Cormorant Upright';">
             CRIMSON CHERRY
           </div>
           <div class="overlay">
@@ -228,7 +221,7 @@
           <img class="img"
             src="https://www.maliburumdrinks.com/contentassets/8670705aa7174418a834d686ebc03cd5/malibu-passion-fruit-pornstar-martini.png"
             alt="">
-          <div class="nhan-text-block-3">
+          <div class="nhan-text-block-3" style="font-family: Loved by the King">
             TANGERINE WHISPER
           </div>
           <div class="overlay">
