--- a/Chinh-index.html
+++ b/Chinh-index.html
@@ -22,13 +22,14 @@
   <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
   <link rel="stylesheet" href="css/author.css">
   <link rel="stylesheet" href="css/nhanstyle.css">
+  <link rel="stylesheet" href="an_menu.css">
   <link rel="stylesheet" href="css/minh_booking.css">
   <title>|||| Gastro Bar Club ||||</title>
 </head>
 
 <body>
   <!--Chinh's Part Start-->
-  <div class="wrapper texttop">
+  <div class="wrapper texttop mb-5">
     <header>
       <nav>
         <div class="menu-icon">
@@ -56,7 +57,7 @@
             data-type='["Wanna something new?", "What are you waiting for?", "Top Ten Night Bar of SEA","Join us in Gastro Today!"]'>
           </p>
         </div>
-        <div class="scroll-stop scroller">
+        <div class="scroll-stop scroller mb-5">
           <button type="button" class="btn btn-danger shadow" style="width: 120px;">
             <p class="click-me-btn text-center d-inline font-weight-bold">Click Me
               !</p>
@@ -93,8 +94,6 @@
       <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
       <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
       <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active" style="height: 500px;">
@@ -232,15 +231,6 @@
     </div>
 
   </div>
-
-
-
-
-
-
-
-
-
   <div class="hung-container">
 
     <div class="nhan-review">
@@ -256,8 +246,6 @@
         <div class="nhan-star"><a class="nhan-icon" href="#"><i class="far fa-star"></i></a>
         </div>
       </div>
-
-
 
       <div class="nhan-review-1">
         "This bar has wonderful views and great service. Loved the ambience and the drinks were all a reasonable price.
@@ -368,14 +356,92 @@
         </div>
       </div>
     </div>
-
-
-
   </div>
   <!-- Nhan's Part End -->
+  <!-- An's Part Start -->
+  <div class="an-special-menu">
+    <h1 class="an-letter">NO PARTY IS COMPLETE WITHOUT COCKTAILS...</h1>
+</div>
+
+<div class="col-md max-width">
+    <div class="row no-gutters border-top border-bottom overflow-hidden flex-md-row mb-4  shadow-sm h-md-250 position-relative">
+        <div class="col p-4 d-flex flex-column position-static an-content">
+            <div class="gifi"> <iframe src="https://giphy.com/embed/gpP18dtmlplle" width="1700" height="492" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="an-special-menu">
+    <h1 class="an-letter">- SPECIAL MENU THIS SUMMER -</h1>
+</div>
+<div class="col-md max-width mt-5 mb-5 text-center d-flex justify-content-around">
+    <div class="row no-gutters border-top border-bottom mt-3 mb-3 overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+        <div class="col-auto d-none d-lg-block pb-4 pt-4 ">
+            <img width="250" height="450" src="https://www.maliburumdrinks.com/globalassets/images/cocktail-recipe-images/malibu-mojito.png?impolicy=CocktailHero">
+            <div class="an-name">Hero Mojito</div>
+        </div>
+        <div class="col-auto d-none d-lg-block pb-4 pt-4">
+            <img width="250" height="450" src="https://www.maliburumdrinks.com/contentassets/3cd6b50c158b4100bd20bf3423b48419/malibusparklingpinacolada_2.png?impolicy=CocktailHero">
+            <div class="an-name">Bubbly Pina</div>
+        </div>
+        <div class="col-auto d-none d-lg-block pb-4 pt-4">
+            <img width="250" height="450" src="https://www.maliburumdrinks.com/contentassets/8670705aa7174418a834d686ebc03cd5/malibu-passion-fruit-pornstar-martini.png?impolicy=CocktailHero">
+            <div class="an-name">Passionate PornStar</div>
+        </div>
+        <div class="col-auto d-none d-lg-block pb-4 pt-4">
+            <img width="250" height="450" src="https://www.maliburumdrinks.com/contentassets/5bad6711cf1d4f7b87dc9ac1f2c87fd6/malibu-lime-pineapple-martini.png?impolicy=CocktailHero">
+            <div class="an-name">Pineatini</div>
+        </div>
+        <div class="col-auto d-none d-lg-block pb-4 pt-4">
+            <img width="250" height="450" src="https://www.maliburumdrinks.com/contentassets/c5521d8b609f41c08277b78dc53320b8/malibupinacoladaslushy_2.png?impolicy=CocktailHero">
+            <div class="an-name">Cola-Slushy</div>
+        </div>
+        <div class="col-auto d-none d-lg-block pb-4 pt-4">
+            <img width="250" height="450" src="https://www.maliburumdrinks.com/contentassets/472cb66e273947afb381e14b00dffc52/malibupinkgrapefruit.png?impolicy=CocktailHero">
+            <div class="an-name">Kinky Grapefruit</div>
+        </div>
+    </div>
+</div>
+
+
+<div class="col-md max-width mt-5 mb-5 text-center d-flex justify-content-around">
+    <div class="row no-gutters border-top border-bottom overflow-hidden flex-md-row mb-4  shadow-sm h-md-250 position-relative">
+        <div class="col-auto d-none d-lg-block pb-4 pt-4">
+            <img width="250" height="450" src="https://www.maliburumdrinks.com/contentassets/7db9554b273e45bbaba988aad004746d/malibubananapineapplefrozendaiquiri_2.png?impolicy=CocktailHero">
+            <div class="an-name">Baneapple-Quiri</div>
+        </div>
+        <div class="col-auto d-none d-lg-block pb-4 pt-4">
+            <img width="250" height="450" src="https://www.maliburumdrinks.com/contentassets/aa7cef789953423fa6e4280d17c2c50c/malibupineapplepinacoladargb.png?impolicy=CocktailHero">
+            <div class="an-name">PinaColada</div>
+        </div>
+        <div class="col-auto d-none d-lg-block pb-4 pt-4">
+            <img width="250" height="450" src="https://www.maliburumdrinks.com/contentassets/025b297254b54e848f704d9010053487/maliburosespritz.png?impolicy=CocktailHero">
+            <div class="an-name">Rose Spritz</div>
+        </div>
+        <div class="col-auto d-none d-lg-block pb-4 pt-4">
+            <img width="250" height="450" src="https://www.maliburumdrinks.com/contentassets/3df4f6bc79b9496e8a8ac28702d65251/malibulimespritzrgb.png?impolicy=CocktailHero">
+            <div class="an-name">Lime Spritz</div>
+        </div>
+        <div class="col-auto d-none d-lg-block pb-4 pt-4">
+            <img width="250" height="450" src="https://www.maliburumdrinks.com/contentassets/f752fc6adb9245e19d8fb231a750c886/malibupineapplergb.png?impolicy=CocktailHero">
+            <div class="an-name">PineaLada</div>
+        </div>
+        <div class="col-auto d-none d-lg-block pb-4 pt-4">
+            <img width="250" height="450" src="https://www.maliburumdrinks.com/contentassets/b6e4d241b75d4341a8d519752ce14e6c/malibulimefrozendaiquiri_2.png?impolicy=CocktailHero">
+            <div class="an-name">Limquiri</div>
+        </div>
+    </div>
+</div>
+<div class="an-special-menu">
+    <h1 class="an-letter">BRING ALL FRIENDS FOR A FREE SHOT AT MIDNIGHT</h1>
+</div>
+
+  <!-- An's Part End -->
   <!-- Chinh's Author Part -->
-  <div class="jumbotron author-img-back">
+  <div class="jumbotron author-img-back d-flex justify-content-around">
     <div class="trans-array-back">
+      <div class="mx-4">
       <h1 class="text-center text-dark">Contributors Of The Site</h1>
       <div class="row chinh-cot">
         <div class="col col-cards">
@@ -463,6 +529,7 @@
           </div>
         </div>
       </div>
+    </div>
     </div>
   </div>
   <!-- Chinh's Author Part End-->
