--- a/Chinh-index.html
+++ b/Chinh-index.html
@@ -584,7 +584,7 @@
 
             <div class="form-group">
               <textarea class="form-control" id="exampleFormControlTextarea1" rows="6"
-                placeholder="Your Addtional Request"></textarea>
+                placeholder="Your Additional Request"></textarea>
             </div>
 
             <button class="btn btn-primary w-100" type="submit">Submit</button>
