--- a/Chinh-index.html
+++ b/Chinh-index.html
@@ -258,9 +258,9 @@
     </div>
 
     <div class="nhan-collection container">
-      <div class="nhan-line"> _</div>
+      <div class="nhan-line"> </div>
       <div class="nhan-rc">–––––REGULAR COLLECTIONS–––––</div>
-      <div class="nhan-line">_</div>
+      <div class="nhan-line"></div>
     </div>
 
 
