--- a/Chinh-index.html
+++ b/Chinh-index.html
@@ -363,10 +363,10 @@
     <h1 class="an-letter">NO PARTY IS COMPLETE WITHOUT COCKTAILS...</h1>
 </div>
 
-<div class="col-md max-width">
-    <div class="row no-gutters border-top border-bottom overflow-hidden flex-md-row mb-4  shadow-sm h-md-250 position-relative">
-        <div class="col p-4 d-flex flex-column position-static an-content">
-            <div class="gifi"> <iframe src="https://giphy.com/embed/gpP18dtmlplle" width="1700" height="492" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
+<div class="col">
+    <div class="row no-gutters border-top border-bottom overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+        <div class="col d-flex flex-column position-static an-content">
+            <div class="gifi w-100 container"> <img src="https://media.giphy.com/media/gpP18dtmlplle/giphy.gif" alt=""></iframe>
             </div>
         </div>
     </div>
