--- a/Chinh-index.html
+++ b/Chinh-index.html
@@ -362,7 +362,7 @@
   <div class="an-special-menu">
     <h1 class="an-letter">NO PARTY IS COMPLETE WITHOUT COCKTAILS...</h1>
 </div>
-
+<!-- Chinh fixed img's Leo -->
 <div class="col">
     <div class="row no-gutters border-top border-bottom overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
         <div class="col d-flex flex-column position-static an-content">
@@ -371,7 +371,7 @@
         </div>
     </div>
 </div>
-
+<!-- Chinh fixed img's Leo -->
 <div class="an-special-menu">
     <h1 class="an-letter">- SPECIAL MENU THIS SUMMER -</h1>
 </div>
