--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@
           <div class="col col-cards">
             <div class="our-team">
               <div class="pic">
-                <img src="/images/ava.png" />
+                <img src="/author/chinh-ava.jpg" />
               </div>
               <div class="team-content px-1">
                 <h3>Chinh Le</h3>
