--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@
           <div class="col col-cards">
             <div class="our-team">
               <div class="pic">
-                <img src="/images/ava.png" />
+                <img src="/author/an-ava.jpg" />
               </div>
               <div class="team-content px-1">
                 <h3>An Ngoan</h3>
