--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@
           <div class="col col-cards">
             <div class="our-team">
               <div class="pic">
-                <img src="/images/ava.png" />
+                <img src="/author/Hung-Nguyen.png" />
               </div>
               <div class="team-content px-1">
                 <h3>Hung Nguyen</h3>
